--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "@types/body-parser": "^1.19.2",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
